--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -133,8 +133,7 @@
         android:weightSum="2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
-
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
         <androidx.cardview.widget.CardView
             android:id="@+id/eventcardview"
             android:layout_width="128dp"
@@ -171,6 +170,9 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.cardview.widget.CardView>
+
+
+
 
         <androidx.cardview.widget.CardView
             android:id="@+id/attendancecardview"
@@ -213,6 +215,7 @@
 
 
     <LinearLayout
+        android:id="@+id/linearLayout3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
@@ -220,45 +223,46 @@
         android:weightSum="2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
+        <androidx.cardview.widget.CardView
+            android:id="@+id/bloodcardview"
+            android:layout_width="200dp"
+            android:layout_height="120dp"
+            android:layout_margin="8dp"
+            android:clickable="true"
+            android:elevation="12dp"
+            android:focusable="true"
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/bloodcardview"
-        android:layout_width="200dp"
-        android:layout_height="120dp"
-        android:layout_margin="8dp"
-        android:clickable="true"
-        android:elevation="12dp"
-        android:focusable="true"
+            app:cardCornerRadius="20dp">
 
-        app:cardCornerRadius="20dp">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-
-            <TextView
-                android:id="@+id/bloodtextview"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="50dp"
-                android:gravity="center"
-                android:text="blood data base"
-                android:textAllCaps="true"
-                android:textColor="@color/red"
-                android:textSize="14sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                android:layout_height="match_parent">
 
 
+                <TextView
+                    android:id="@+id/bloodtextview"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="50dp"
+                    android:gravity="center"
+                    android:text="blood data base"
+                    android:textAllCaps="true"
+                    android:textColor="@color/red"
+                    android:textSize="14sp"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toStartOf="parent" />
 
-    </androidx.cardview.widget.CardView>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+        </androidx.cardview.widget.CardView>
+
+
     </LinearLayout>
 
 
